# hetman-pipeline

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-publish.yml  python-publish.yml
docs/: condition.md  custom_handlers.md  customization.md  examples.md  hooks.md  index.md  integrations.md  match.md  modifiers.md  plugins.md  technical_reference.md  transform.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
pipeline/core/pipe/: pipe.py
pipeline/core/pipeline/: pipeline.py
pipeline/handlers/: __init__.py
pipeline/handlers/condition_handler/: __init__.py  condition.py
pipeline/handlers/match_handler/units/: match_format.py
pipeline/handlers/transform_handler/: transform.py
